Remove user from connection string, and removed unused usings

--- a/Project/Xeromatic/Web.config
+++ b/Project/Xeromatic/Web.config
@@ -5,7 +5,7 @@
   -->
 <configuration>
     <connectionStrings>
-        <add name="tweetDB" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=Xeromatic;User=XeromaticUser;Password=Password1;" />
+        <add name="tweetDB" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=Xeromatic;" />
     </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
